@@ -20,27 +20,19 @@ if exist "%~dp0jre\bin\java.exe" (
 
 set wbdir=%~dp0
 
-set cp=%wbdir%sqlworkbench.jar
-set cp=%cp%;%wbdir%poi*.jar
-set cp=%cp%;%wbdir%dom4j*.jar
-set cp=%cp%;%wbdir%stax*.jar
-set cp=%cp%;%wbdir%*odf*.jar
-set cp=%cp%;%wbdir%resolver*.jar
-set cp=%cp%;%wbdir%serializer*.jar
-set cp=%cp%;%wbdir%xerces*.jar
-set cp=%cp%;%wbdir%log4j.jar
-set cp=%cp%;%wbdir%mail.jar
-set cp=%cp%;%wbdir%ext\*
+set cp=%wbdir%sqlworkbench.jar;%wbdir%\ext\*
 
 call :get_memory
 set /a max_mem=%free_memory% / 2
 
 if "%1"=="console" goto console_mode
 
+rem for Java 9 or later add the option
+rem --add-opens java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED
 :gui
 start "SQL Workbench/J" "%JAVA_BINPATH%javaw.exe"^
       -Xmx%max_mem%m ^
-      -Dvisualvm.display.name=SQLWorkbench ^
+      -Dvisualvm.display.name=SQLWorkbench/J ^
       -Dsun.awt.keepWorkingSetOnMinimize=true ^
       -Dsun.java2d.dpiaware=true ^
       -Dsun.java2d.noddraw=true ^
